--- a/client_persistent_storage/Dockerfile
+++ b/client_persistent_storage/Dockerfile
@@ -6,5 +6,7 @@ WORKDIR /client_storage/
 ADD client.py /client_storage/
 #Opent the port where the server will listen
 EXPOSE 5000
-#execute the command to start the server
-CMD [ "python3", "/client_storage/client.py" ]
+#execute the command to start the server. Bash executed to avoid stopping the container when routing table is 
+#still being set
+CMD [ "bash" ]
+
